--- a/popUpStyles.css
+++ b/popUpStyles.css
@@ -2,13 +2,12 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgb(0 0 0 / 80%);
   top: 0;
   left: 0;
   opacity: 0;
   visibility: hidden;
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow: hidden auto;
   transition: all 0.8s ease 0s;
   z-index: 2;
 }
@@ -20,7 +19,7 @@
 
 .popup.open .popup__content {
   border-radius: 10%;
-  transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
+  transform: perspective(600px) translate(0, 0%) rotateX(0deg);
   opacity: 1;
 }
 
@@ -48,8 +47,9 @@
   position: relative;
   transition: all 0.8s ease 0s;
   opacity: 0;
-  transform: perspective(600px) translate(0px, -100%) rotateX(45deg);
+  transform: perspective(600px) translate(0, -100%) rotateX(45deg);
 }
+
 .popup__avatar {
   width: 100%;
   height: 100%;
@@ -64,19 +64,20 @@
   color: black;
   text-decoration: none;
 }
+
 .popupTwo__close {
   position: absolute;
   right: 60px;
   top: 40px;
   font-size: 20px;
-  color: rgb(255, 255, 255);
+  color: rgb(255 255 255);
   text-decoration: none;
 }
 
 .popup__title {
   text-align: center;
   font-size: 40px;
-  margin: 0px 0px 0.5em 0px;
+  margin: 0 0 0.5em;
 }
 
 .popup__link {
@@ -84,35 +85,36 @@
   color: gray;
   font-size: 1.2em;
 }
+
 #blink {
-  -webkit-animation: blink 1s linear infinite;
+  animation: blink 1s linear infinite;
   animation: blink 1s linear infinite;
 }
 
-@-webkit-keyframes blink {
+@keyframes blink {
   0% {
-    color: rgb(128, 0, 0);
+    color: rgb(128 0 0);
   }
 
   50% {
-    color: rgb(183, 65, 14);
+    color: rgb(183 65 14);
   }
 
   100% {
-    color: rgb(128, 0, 0);
+    color: rgb(128 0 0);
   }
 }
 
 @keyframes blink {
   0% {
-    color: rgb(128, 0, 0);
+    color: rgb(128 0 0);
   }
 
   50% {
-    color: rgb(183, 65, 14);
+    color: rgb(183 65 14);
   }
 
   100% {
-    color: rgb(128, 0, 0);
+    color: rgb(128 0 0);
   }
 }
