--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ body.lock {
   margin-bottom: 15px;
 }
 
-@media screen and (max-width: 576px) {
+@media screen and (width <= 576px) {
   .main-info,
   .contact_info_container {
     flex-direction: column;
@@ -296,24 +296,26 @@ body.lock {
   justify-content: space-evenly;
   width: 90%;
   height: 90%;
-  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
-  border: 1px solid rgba(255, 255, 255, 0.8);
+  backface-visibility: hidden;
+  border: 1px solid rgb(255 255 255 / 80%);
 }
 
 .frontSide,
 .frontSide::before {
   background: linear-gradient(
     43deg,
-    rgb(65, 88, 208) 0%,
-    rgb(200, 80, 192) 46%,
-    rgb(255, 204, 112) 100%
+    rgb(65 88 208) 0%,
+    rgb(200 80 192) 46%,
+    rgb(255 204 112) 100%
   );
 }
+
 .backSide,
 .backSide::before {
   background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
 }
+
 .backSide {
   transform: rotateY(180deg);
 }
@@ -341,6 +343,7 @@ body.lock {
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -356,6 +359,7 @@ body.lock {
     left: 200px;
     opacity: 0;
   }
+
   to {
     opacity: 1;
     left: 0;
