--- a/styles.css
+++ b/styles.css
@@ -369,3 +369,14 @@ body.lock {
 a {
   text-decoration: none;
 }
+.skills__item {
+  display: inline-block;
+  margin: 5px 10px;
+  padding: 5px 10px;
+  background-color: #f5f5f5;
+  border-radius: 5px;
+  color: var(--primary-text-color);
+  font-size: 0.9rem;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
